@@ -44,11 +44,10 @@ import java.text.MessageFormat;
 import java.util.NoSuchElementException;
 import javax.swing.JComponent;
 import javax.swing.event.ChangeListener;
-import org.netbeans.modules.cnd.api.remote.ServerList;
 import org.netbeans.modules.cnd.ui.options.ToolsCacheManager;
+import org.netbeans.modules.cnd.utils.CndUtils;
 import org.openide.DialogDisplayer;
 import org.openide.WizardDescriptor;
-import org.openide.util.Lookup;
 import org.openide.util.NbBundle;
 
 public final class CreateHostWizardIterator implements WizardDescriptor.Iterator<WizardDescriptor> {
@@ -77,7 +76,7 @@ public final class CreateHostWizardIterator implements WizardDescriptor.Iterator
                     JComponent jc = (JComponent) c;
                     // Sets step number of a component
                     // TODO if using org.openide.dialogs >= 7.8, can use WizardDescriptor.PROP_*:
-                    jc.putClientProperty("WizardPanel_contentSelectedIndex", new Integer(i)); //NOI18N
+                    jc.putClientProperty("WizardPanel_contentSelectedIndex", Integer.valueOf(i)); //NOI18N
                     // Sets steps names for a panel
                     jc.putClientProperty("WizardPanel_contentData", steps); //NOI18N
                     // Turn on subtitle creation on each step
@@ -142,6 +141,11 @@ public final class CreateHostWizardIterator implements WizardDescriptor.Iterator
         dialog.toFront();
         boolean cancelled = wizardDescriptor.getValue() != WizardDescriptor.FINISH_OPTION;
         if (!cancelled) {
+            Runnable r = (Runnable) wizardDescriptor.getProperty(CreateHostWizardPanel2.PROP_RUN_ON_FINISH);
+            CndUtils.assertFalse(r == null);
+            if (r != null) {
+                r.run();
+            }
             return (String)wizardDescriptor.getProperty(CreateHostWizardPanel2.PROP_HOSTKEY);
         } else {
             return null;
